# ChangeLog for dev-libs/libevent
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libevent/ChangeLog,v 1.265 2014/01/18 04:51:21 vapier Exp $

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> libevent-2.0.21.ebuild,
  libevent-2.1.3.ebuild:
  Add arm64 love.

  05 Jan 2014; Fabian Groffen <grobian@gentoo.org> libevent-2.1.3.ebuild:
  Marked ~m68k-mint, bug #494512

  15 Jul 2013; Jeroen Roovers <jer@gentoo.org> -libevent-2.1.2.ebuild:
  Old.

  05 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Add upstream CPE tag (security info) from ChromiumOS.

*libevent-2.1.3 (03 May 2013)

  03 May 2013; Jeroen Roovers <jer@gentoo.org> +libevent-2.1.3.ebuild:
  Version bump.

  24 Apr 2013; Jeroen Roovers <jer@gentoo.org> -libevent-2.1.1.ebuild,
  libevent-2.0.21.ebuild, libevent-2.1.2.ebuild:
  Use prune_libtool_files. Remove old.

  08 Mar 2013; Jeroen Roovers <jer@gentoo.org> -libevent-2.0.19.ebuild,
  -libevent-2.0.20.ebuild:
  Old.

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> libevent-2.0.21.ebuild:
  Stable for sh, wrt bug #449746

  20 Feb 2013; Agostino Sarubbo <ago@gentoo.org> libevent-2.0.21.ebuild:
  Stable for s390, wrt bug #449746

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libevent-2.0.21.ebuild:
  Stable for alpha, wrt bug #449746

  13 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libevent-2.0.21.ebuild:
  Stable for x86, wrt bug #449746

  07 Jan 2013; Jeroen Roovers <jer@gentoo.org> libevent-2.0.21.ebuild:
  Stable for HPPA (bug #449746).

  06 Jan 2013; Markus Meier <maekke@gentoo.org> libevent-2.0.21.ebuild:
  arm stable, bug #449746

  05 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> libevent-2.0.21.ebuild:
  Stable on amd64, wrt bug #449746

  05 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libevent-2.0.21.ebuild:
  Stable for sparc, wrt bug #449746

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libevent-2.0.21.ebuild:
  Stable for ia64, wrt bug #449746
