@@ -2,25 +2,15 @@
 Hash: SHA256
 
 DIST libevent-2.0.21-stable.tar.gz 850772 SHA256 22a530a8a5ba1cb9c080cba033206b17dacd21437762155c6d30ee6469f574f5 SHA512 fbcdd12af9313ecc0f2988eb46ef03906b1c3aff96871a165eb8eae2cb650b1a3bb420dccf3a6bc3cdc192436d8dfc2ce67a7cc7d9e586f27be1fa52dd62dfa1 WHIRLPOOL e1d2571235770251b8a2d3f1565238909df307d7de2bb86eefeca136c76eba5f645cea951ec58fdc4f2e6bcd70b74d128ddf7df5aec4ee164fb2c6c52136989e
-DIST libevent-2.1.3-alpha.tar.gz 932389 SHA256 99da550aaaf998d69c2f39bc3d236aba7f5251742e5ab74b273e36e6742ac850 SHA512 2e09773b66d0efc22c0b8761b4dff9eaed0e1f4e996fb6ff57b8f2c08331888bf1f9069c4749bd4da32cdd0d2a65cba48b28a47f88abc3bc4a6c9eb7c102e98c WHIRLPOOL 5b0427c7b8123801e49d3f474cb4b32a1b5b18ef5b6fdc5be6896413d2814b458357f6c89e0331bbc9c95dd452134922b6d8d128463b45e05d39d92faeae4791
+DIST libevent-2.1.4-alpha.tar.gz 957745 SHA256 7e5a1f464f7c7298cbb3074481d7c620553288b73f4a6bebeea84173edc4bce5 SHA512 d75911fc968884a49bea0127f6d478b160b05032e446b8105c833b4acca6412d2eaa7b5077b1b4b902bfc5789060394433188ac36f8d4954691e00aa7ca1e0bd WHIRLPOOL 4d5b0bb7a648d658245f0d802d10da199726a8459da2dfab470f937bf61029d903d4bc688416078ba24e6627e08bd5375df0ce00f0842a7033739b79940ecd7d
 EBUILD libevent-2.0.21.ebuild 1382 SHA256 5ce4d1731947f3519b95fef0f5d38ff0228aa8c9c046d46a1fc5b7624b3d241b SHA512 299b4819e3c020ab4fe5d8d639592f89f15351b904bbc840725ce274d0a1934377e397667bfd3e3f364f905fa79b0acaa387316e52e84bdffab1f2e5b218ee97 WHIRLPOOL 9c18471707578491100e8530ce09c51f406f902a4a5f3b23853da95d40a770231ec5c587f29c2df901859ffb94955ff47fd5305ab1c2e9d5600d8fd4b90352c1
-EBUILD libevent-2.1.3.ebuild 1407 SHA256 4e88a6ea3b813608ce638e6bc68129822f28200d6875dbdadfd1a6fc55ed4cb5 SHA512 c9d90c3420f19930b65fc102062b66e8dd52cc78f02b5c857bde2b88618131081b006550e498938217983391d0fba93ffdd99885a57b987ec54e781d9263e5b9 WHIRLPOOL b993bd778c4f65acc5ab5a6ddc19385777b4bf9e7ad3ae0114827025655f25dde072e3187b909ee19603e4b0ab5048ac115efbdb53e7ca10c023bc6eeb507d78
-MISC ChangeLog 31167 SHA256 c98cda7a9c331f91ced3a0b40aa1063718a5e84350944ab335d2cf5ab5857131 SHA512 caf255a563c51f0f92b010ada8894825e6a013716b1e75164b2c49b1daa6fbda9b911a343d12b0ab217d1883af0a1fd35417b0867b59b2d7d205c2d80703dd81 WHIRLPOOL d2fdf5bf169a31c35bc6daff5393025ca6f47f76d79ac3087164bfb5c336ad18d8bd9a6f86af0938e6ebfcaad7cb803127b0ed2dd156e3a3469b56881f2f93e4
+EBUILD libevent-2.1.4.ebuild 1065 SHA256 9ead3185b2f4629d2f8166aa707673444af07ae55665cd95574bf4928101d788 SHA512 2abf8fa85735d4eecdad60c4ea6f6d4f7df5e719100f1a11c4d25c7bf19323cb4cb84f3534e8b32e6ccdb31345176e1a4ec7b490b46483f14bc5c85dcaa22950 WHIRLPOOL 08f8012e483340b783e32f95a16e5be0ca0e9d9d88356b286a5c05d108516de983f3c99e5596787ef27927a6dcd88b5e4d026ca811f0a5400013a569569b46de
+MISC ChangeLog 31309 SHA256 5c0673511bd933af218d14357cef763a6eaa0b1d735a10a840b121ecfc3a853f SHA512 25426644d84081aba20d020d342cb18d813e9d0fd9d9c420268877297e9d7dea2bc98b3c36140efc2d5ac99fe6cf8b0f76f531ddf96faf600c7197422c9e47f3 WHIRLPOOL 99247cf6172b58f98bbc43ac07923c2c5b4591c50a18e6b1d6092f130324f7da11e0c3ff6b1bcc0e72a36cf441d31c9c36dd6f7a2a56855893b05ed35c5951a7
 MISC metadata.xml 320 SHA256 7272c89b9ce54e74fe47236d9c8aa65c71f18606a197e875185cbbc284d9e4c6 SHA512 4ec61478c7fbe4181ce995af38470b57ae5b83846a6edfef0e099bfc2dceb444e37b61861f26df75360f48fc567a212af8924f5067c4ddb5a71b6605f775e72a WHIRLPOOL 07fecddf8c350853fffdc6c134023bf573c76a59a5abd01189cbc8edd47fc3fbb580658a89b3c7d9ac0082be99bd619ab7d76b07d62cdbbc4092f704caf8aac7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS2ghRAAoJEPGu1DbS6WIAjzoP/20S157+8a5MiEqXcY/TbQbJ
-/fTjzCNzcWqNQnk9VtIE3clVI+n7bRIHC9ocC72cjXARpZPdP9sYLrjdfdkA8DDZ
-1vbVJBrPwBaJzLQZR0Ur1kaClHs+OjNC5cuFAkGfG0F07JPdEzjXDmvLAqqAUaSr
-9k1KvkcUAU+HmjQe4DXPEywvElusuU0MunzzYQVd2uRwBAP+YXAyyntR4eZZINVE
-hHBw1qyWMRZGc/8nVp0E6JJitcoj2DuYT1aTnMR4biq8jdH1j1yAVoeYHYBdxzoS
-GCvo12FHpu527laUtRr/ORl8qpzd4xHPxJGBdyQKmFaTI011NfGudyQ9yup1cJSS
-CtTPD29hKuRteYZsVqXQizE502eU0LrIpQG7wqE5tJ86n0QuIDSw74gz+pQDEob1
-plFgiDb27uyVelTvqQRSPAN1YXM3Kn/ApfAT6rq4+zMDP7CxnVDSX08HSorbzOo4
-kGxx+aTSJaE8tslzL1rcgg459gIJWrZGyMspc6vg30J4lHiutQkyOy0hLGhxJwA8
-IjTAM9A7qPVT85jYmo69BIX4k2a/Q5zY2EGgZJatzAInImJ+Pxyd6v4Lrrxa6hg8
-nnL2F+jsKSSmoSpCH3Zs2yE1B5xxqBt+MIybJXr23Qb+oS9NZyMGElEUu5KAI1nY
-+ouCsbn+M9eThn4iHddA
-=rEQy
+iEYEAREIAAYFAlMsexAACgkQVWmRsqeSphMMswCeL7l2q80pLOPxc9BBDl+0FJwS
+HxkAnj52ykmaEd/MKAANwg7bWSGrgtux
+=k4OT
 -----END PGP SIGNATURE-----
