@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libevent/libevent-2.1.3.ebuild,v 1.3 2014/01/18 04:51:21 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libevent/libevent-2.1.4.ebuild,v 1.1 2014/03/21 17:46:55 jer Exp $
 
 EAPI=5
 inherit eutils libtool
@@ -13,7 +13,7 @@ SRC_URI="mirror://sourceforge/levent/files/${MY_P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~x64-solaris ~x86-solaris"
+KEYWORDS=""
 IUSE="+ssl static-libs test"
 
 DEPEND="ssl? ( dev-libs/openssl )"
@@ -26,11 +26,7 @@ S=${WORKDIR}/${MY_P}
 
 src_prepare() {
 	elibtoolize
-
-	# don't waste time building tests/samples
-	sed -i \
-		-e 's|^\(SUBDIRS =.*\)sample test\(.*\)$|\1\2|' \
-		Makefile.in || die "sed Makefile.in failed"
+	sed -i -e '/^all:/s|tests||g' Makefile.nmake || die
 }
 
 src_configure() {
@@ -46,7 +42,7 @@ src_test() {
 	# emake -C test check | tee "${T}"/tests
 }
 
-DOCS="README ChangeLog*"
+DOCS=( ChangeLog{,-1.4,-2.0} )
 
 src_install() {
 	default
