@@ -4,10 +4,9 @@ DESCRIPTION=A library to execute a function when a specific event occurs on a fi
 EAPI=5
 HOMEPAGE=http://libevent.org/
 IUSE=+ssl static-libs test
-KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~x64-solaris ~x86-solaris
 LICENSE=BSD
 RDEPEND=ssl? ( dev-libs/openssl ) !<=dev-libs/9libs-1.0
 SLOT=0
-SRC_URI=mirror://sourceforge/levent/files/libevent-2.1.3-alpha.tar.gz
+SRC_URI=mirror://sourceforge/levent/files/libevent-2.1.4-alpha.tar.gz
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=29cc3df38addd110ac11b95ff7228fdb
+_md5_=d6dee9c5f11b5f2fe10899bd3fa2e320
