@@ -1,5 +1,5 @@
 ####################################################################
-# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.15493 2014/03/21 07:43:11 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.15494 2014/03/21 17:48:27 jer Exp $
 #
 # When you add an entry to the top of this file, add your name, the date, and
 # an explanation of why something is getting masked. Please be extremely
@@ -885,10 +885,6 @@ dev-ml/ocamlduce
 # Maxim Koltsov <maksbotan@gentoo.org> (19 Apr 2012)
 # Broken, masking by maintainer's request
 app-leechcraft/lc-lcftp
-
-# Jeroen Roovers <jer@gentoo.org> (04 Apr 2012)
-# Alpha versions of dev-libs/libevent are considered unstable
->dev-libs/libevent-2.1
 
 # Andreas K. Huettel <dilfridge@gentoo.org> (22 Mar 2012)
 # Even its author admits that it's an ugly hack. Crashes e.g.
