@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libevent
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libevent/ChangeLog,v 1.265 2014/01/18 04:51:21 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libevent/ChangeLog,v 1.266 2014/03/21 17:46:55 jer Exp $
+
+*libevent-2.1.4 (21 Mar 2014)
+
+  21 Mar 2014; Jeroen Roovers <jer@gentoo.org> -libevent-2.1.3.ebuild,
+  +libevent-2.1.4.ebuild:
+  Version bump.
 
   18 Jan 2014; Mike Frysinger <vapier@gentoo.org> libevent-2.0.21.ebuild,
   libevent-2.1.3.ebuild:
